# software_cours

./: .releaserc.txt  CMakeLists.txt  Dockerfile  README.md  do_tests.bat  hello.cpp
.github/workflows/: CD.yml  CI.yml  cmake-multi-platform.yml
include/basic/: message.h
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
